syntax = "proto3";

package serviceapi;

option go_package = "github.com/smilemakc/mbflow/api/proto/serviceapipb";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// MBFlowServiceAPI provides programmatic access to MBFlow workflows, executions,
// triggers, credentials, and audit logs. Authentication is via system keys
// passed in gRPC metadata (x-system-key or authorization header).
service MBFlowServiceAPI {
  // Workflows
  rpc ListWorkflows(ListWorkflowsRequest) returns (ListWorkflowsResponse);
  rpc GetWorkflow(GetWorkflowRequest) returns (WorkflowResponse);
  rpc CreateWorkflow(CreateWorkflowRequest) returns (WorkflowResponse);
  rpc UpdateWorkflow(UpdateWorkflowRequest) returns (WorkflowResponse);
  rpc DeleteWorkflow(DeleteWorkflowRequest) returns (DeleteResponse);

  // Executions
  rpc ListExecutions(ListExecutionsRequest) returns (ListExecutionsResponse);
  rpc GetExecution(GetExecutionRequest) returns (ExecutionResponse);
  rpc StartExecution(StartExecutionRequest) returns (ExecutionResponse);
  rpc CancelExecution(CancelExecutionRequest) returns (ExecutionResponse);
  rpc RetryExecution(RetryExecutionRequest) returns (ExecutionResponse);

  // Triggers
  rpc ListTriggers(ListTriggersRequest) returns (ListTriggersResponse);
  rpc CreateTrigger(CreateTriggerRequest) returns (TriggerResponse);
  rpc UpdateTrigger(UpdateTriggerRequest) returns (TriggerResponse);
  rpc DeleteTrigger(DeleteTriggerRequest) returns (DeleteResponse);

  // Credentials
  rpc ListCredentials(ListCredentialsRequest) returns (ListCredentialsResponse);
  rpc CreateCredential(CreateCredentialRequest) returns (CredentialResponse);
  rpc UpdateCredential(UpdateCredentialRequest) returns (CredentialResponse);
  rpc DeleteCredential(DeleteCredentialRequest) returns (DeleteResponse);

  // Audit
  rpc ListAuditLog(ListAuditLogRequest) returns (ListAuditLogResponse);
}

// ============================================================================
// Workflow messages
// ============================================================================

message ListWorkflowsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string status = 3;
  string user_id = 4;
}

message ListWorkflowsResponse {
  repeated Workflow workflows = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message GetWorkflowRequest {
  string id = 1;
}

message CreateWorkflowRequest {
  string name = 1;
  string description = 2;
  google.protobuf.Struct variables = 3;
  google.protobuf.Struct metadata = 4;
}

message UpdateWorkflowRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Struct variables = 4;
  google.protobuf.Struct metadata = 5;
  repeated Node nodes = 6;
  repeated Edge edges = 7;
  repeated ResourceAttachment resources = 8;
}

message DeleteWorkflowRequest {
  string id = 1;
}

message WorkflowResponse {
  Workflow workflow = 1;
}

message Workflow {
  string id = 1;
  string name = 2;
  string description = 3;
  string status = 4;
  int32 version = 5;
  google.protobuf.Struct variables = 6;
  google.protobuf.Struct metadata = 7;
  repeated Node nodes = 8;
  repeated Edge edges = 9;
  string created_by = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message Node {
  string id = 1;
  string name = 2;
  string type = 3;
  google.protobuf.Struct config = 4;
  google.protobuf.Struct position = 5;
}

message Edge {
  string id = 1;
  string from = 2;
  string to = 3;
  google.protobuf.Struct condition = 4;
}

message ResourceAttachment {
  string resource_id = 1;
  string alias = 2;
  string access_type = 3;
}

// ============================================================================
// Execution messages
// ============================================================================

message ListExecutionsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string workflow_id = 3;
  string status = 4;
}

message ListExecutionsResponse {
  repeated Execution executions = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message GetExecutionRequest {
  string id = 1;
}

message StartExecutionRequest {
  string workflow_id = 1;
  google.protobuf.Struct input = 2;
}

message CancelExecutionRequest {
  string id = 1;
}

message RetryExecutionRequest {
  string id = 1;
}

message ExecutionResponse {
  Execution execution = 1;
}

message Execution {
  string id = 1;
  string workflow_id = 2;
  string status = 3;
  google.protobuf.Struct input = 4;
  google.protobuf.Struct output = 5;
  string error = 6;
  repeated NodeExecution node_executions = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp completed_at = 9;
  google.protobuf.Timestamp created_at = 10;
  int64 duration_ms = 11;
}

message NodeExecution {
  string id = 1;
  string node_id = 2;
  string node_name = 3;
  string node_type = 4;
  string status = 5;
  google.protobuf.Struct input = 6;
  google.protobuf.Struct output = 7;
  string error = 8;
  google.protobuf.Timestamp started_at = 9;
  google.protobuf.Timestamp completed_at = 10;
  int64 duration_ms = 11;
}

// ============================================================================
// Trigger messages
// ============================================================================

message ListTriggersRequest {
  int32 limit = 1;
  int32 offset = 2;
  string workflow_id = 3;
  string type = 4;
}

message ListTriggersResponse {
  repeated Trigger triggers = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message CreateTriggerRequest {
  string workflow_id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  google.protobuf.Struct config = 5;
  bool enabled = 6;
}

message UpdateTriggerRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;
  google.protobuf.Struct config = 5;
  optional bool enabled = 6;
}

message DeleteTriggerRequest {
  string id = 1;
}

message TriggerResponse {
  Trigger trigger = 1;
}

message Trigger {
  string id = 1;
  string workflow_id = 2;
  string name = 3;
  string description = 4;
  string type = 5;
  google.protobuf.Struct config = 6;
  bool enabled = 7;
  google.protobuf.Timestamp last_run = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// ============================================================================
// Credential messages
// ============================================================================

message ListCredentialsRequest {
  string user_id = 1;
  string provider = 2;
}

message ListCredentialsResponse {
  repeated Credential credentials = 1;
}

message CreateCredentialRequest {
  string name = 1;
  string description = 2;
  string credential_type = 3;
  string provider = 4;
  map<string, string> data = 5;
}

message UpdateCredentialRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DeleteCredentialRequest {
  string id = 1;
}

message CredentialResponse {
  Credential credential = 1;
}

message Credential {
  string id = 1;
  string name = 2;
  string description = 3;
  string status = 4;
  string credential_type = 5;
  string provider = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp last_used_at = 8;
  int64 usage_count = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  repeated string fields = 12;
}

// ============================================================================
// Audit messages
// ============================================================================

message ListAuditLogRequest {
  int32 limit = 1;
  int32 offset = 2;
  string service_name = 3;
  string action = 4;
  string resource_type = 5;
  string impersonated_user_id = 6;
  google.protobuf.Timestamp date_from = 7;
  google.protobuf.Timestamp date_to = 8;
}

message ListAuditLogResponse {
  repeated AuditLogEntry audit_logs = 1;
  int64 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message AuditLogEntry {
  string id = 1;
  string system_key_id = 2;
  string service_name = 3;
  string action = 4;
  string resource_type = 5;
  string resource_id = 6;
  string impersonated_user_id = 7;
  string method = 8;
  string path = 9;
  string request_body = 10;
  string client_ip = 11;
  int32 response_status = 12;
  google.protobuf.Timestamp created_at = 13;
}

// ============================================================================
// Common messages
// ============================================================================

message DeleteResponse {
  string message = 1;
}
